prow/gcp/cluster/sinker_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sinker
  namespace: default
  labels:
    app: sinker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sinker
  template:
    metadata:
      labels:
        app: sinker
    spec:
      serviceAccountName: sinker
      containers:
      - name: sinker
        image: us-docker.pkg.dev/k8s-infra-prow/images/sinker:v20261001-ae4792128
        args:
        - --config-path=/etc/config/config.yaml
        - --dry-run=false
        - --job-config-path=/etc/job-config
        ports:
        - name: metrics
          containerPort: 9090
        volumeMounts:
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - mountPath: /etc/kubeconfig
          name: kubeconfig
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      - name: kubeconfig
        configMap:
          defaultMode: 420
          name: kubeconfig
