prow/gcp/cluster/statusreconciler_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: statusreconciler
  labels:
    app: statusreconciler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statusreconciler
  template:
    metadata:
      labels:
        app: statusreconciler
    spec:
      # serviceAccountName: "statusreconciler" # Uncomment for use with RBAC
      terminationGracePeriodSeconds: 180
      containers:
      - name: statusreconciler
        image: us-docker.pkg.dev/k8s-infra-prow/images/status-reconciler:v20261008-e012f2883
        imagePullPolicy: Always
        args:
        - --config-path=/etc/config/config.yaml
        - --continue-on-error=true
        - --dry-run=false
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        - --github-token-path=/etc/github/oauth
        - --job-config-path=/etc/job-config
        - --plugin-config=/etc/plugins/plugins.yaml
        volumeMounts:
        - name: oauth
          mountPath: /etc/github
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - name: plugins
          mountPath: /etc/plugins
          readOnly: true
      volumes:
      - name: oauth
        secret:
          secretName: oauth-token
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      - name: plugins
        configMap:
          name: plugins
