prow/gcp/cluster/prow-controller-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: prow-controller-manager
  labels:
    app: prow-controller-manager
spec:
  replicas: 1 # TODO(fejta) - delete plank
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: prow-controller-manager
  template:
    metadata:
      labels:
        app: prow-controller-manager
    spec:
      serviceAccountName: prow-controller-manager
      containers:
      - name: prow-controller-manager
        image: us-docker.pkg.dev/k8s-infra-prow/images/prow-controller-manager:v20261008-e012f2883
        args:
        - --config-path=/etc/config/config.yaml
        - --dry-run=false
        - --enable-controller=plank
        - --job-config-path=/etc/job-config
        ports:
        - name: metrics
          containerPort: 9090
        volumeMounts:
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - mountPath: /etc/kubeconfig
          name: kubeconfig
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      - name: kubeconfig
        configMap:
          defaultMode: 420
          name: kubeconfig
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prow-controller-manager
  namespace: default
  name: prow-controller-manager
spec:
  ports:
    - name: metrics
      port: 9090
  selector:
    app: prow-controller-manager
