prow/gcp/cluster/tls-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: tls-ing
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prow
    networking.gke.io/managed-certificates: prow-istio-io,prow-private-istio-io
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: prow.istio.io
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: deck
            port:
              number: 80
      - path: /hook
        pathType: ImplementationSpecific
        backend:
          service:
            name: hook
            port:
              number: 8888
  - host: prow-private.istio.io
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: deck-private
            port:
              number: 80
